--- a/addtask.html
+++ b/addtask.html
@@ -19,7 +19,8 @@
     </div>
     <nav id="navbar">
     </nav>
-
+    <div id="smallNav" class="smallNav">
+    </div>
     <main>
         <h1>Add Task</h1>
         <div class="mainContainer">
