--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Summary</title>
+    <title>Login</title>
     <link rel="stylesheet" href="./css/templates.css">
     <link rel="stylesheet" href="./css/login.css">
     <link rel="icon" type="image/x-icon" href="./img/favicon.png">
@@ -14,8 +14,8 @@
 <div>
     <div class="startscreen"></div>
     <img class="logoStartscreen" src="./img/login/Capa 2.svg" alt="">
-</div>
 
+</div>
 
     <div class="header">
         <div></div>
@@ -44,7 +44,11 @@
             </div>
         </form>
     </div>
-
+    <div class="headerResponsive">
+        <div class="registerSection"><span class="typoRegister">Not a Join user?</span>
+            <Button class="buttonSignup">Sign up</Button>
+        </div>
+    </div>
     <div class="policies">
         <span class="privacyPolicy">Privacy Policy</span>
         <span class="legalNotice">Legal notice</span>
