--- a/contacts.html
+++ b/contacts.html
@@ -24,129 +24,39 @@
         <div class="contactsFrame" id="contactsFrame">
             <button class="newContactButton" onclick="openAddContact()">Add new contact <img
                     src="./img/contacts/personadd.svg" alt=""></button>
-            <div id="contactsList" class="contactsList">
+            <div class="contactsList">
                 <div class="contactLetter">A</div>
                 <div class="contactsSeparationLine"></div>
-                <div class="contactsGroup">
-                    <!-- <div onclick="selectContact('contact1')" class="contactField">
-                        <div class="contactProfileBadge">AM</div>
-                        <div class="contactDetails">
-                            <div class="contactName">Anton Mayer</div>
-                            <div class="contactEmail">antonm@gmail.com</div>
-                        </div>
-                    </div>
-                    <div class="contactField">
-                        <div class="contactProfileBadge">AS</div>
-                        <div class="contactDetails">
-                            <div class="contactName">Anja Schulz</div>
-                            <div class="contactEmail">schulz@hotmail.com</div>
-                        </div>
-                    </div> -->
+                <div class="contactsGroup" id="contactsList">
+                    <!-- RENDER JS-->
                 </div>
-                <!-- <div class="contactLetter">B</div>
-                <div class="contactsSeparationLine"></div>
-                <div class="contactsGroup">
-                    <div class="contactField">
-                        <div class="contactProfileBadge">BZ</div>
-                        <div class="contactDetails">
-                            <div class="contactName">Benedikt Ziegler</div>
-                            <div class="contactEmail">benedikt@gmail.com</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="contactLetter">D</div>
-                <div class="contactsSeparationLine"></div>
-                <div class="contactsGroup">
-                    <div class="contactField">
-                        <div class="contactProfileBadge">DE</div>
-                        <div class="contactDetails">
-                            <div class="contactName">David Eisenberg</div>
-                            <div class="contactEmail">davidberg@gmail.com</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="contactLetter">E</div>
-                <div class="contactsSeparationLine"></div>
-                <div class="contactsGroup">
-                    <div class="contactField">
-                        <div class="contactProfileBadge">EF</div>
-                        <div class="contactDetails">
-                            <div class="contactName">Eva Fischer</div>
-                            <div class="contactEmail">eva@gmail.com</div>
-                        </div>
-                    </div>
-                    <div class="contactField">
-                        <div class="contactProfileBadge">EM</div>
-                        <div class="contactDetails">
-                            <div class="contactName">Emanuel Mauer</div>
-                            <div class="contactEmail">emmanuelma@gmail.com</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="contactLetter">M</div>
-                <div class="contactsSeparationLine"></div>
-                <div class="contactsGroup">
-                    <div class="contactField">
-                        <div class="contactProfileBadge">MB</div>
-                        <div class="contactDetails">
-                            <div class="contactName">Marcel Bauer</div>
-                            <div class="contactEmail">bauer@gmail.com</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="contactLetter">T</div>
-                <div class="contactsSeparationLine"></div>
-                <div class="contactsGroup">
-                    <div class="contactField">
-                        <div class="contactProfileBadge">TW</div>
-                        <div class="contactDetails">
-                            <div class="contactName">Tatjana Wolf</div>
-                            <div class="contactEmail">wolf@gmail.com</div>
-                        </div>
-                    </div>
-                </div> -->
             </div>
         </div>
-        <div id="contactPage" class="contactPage" id="contactPage">
+
+        <div id="contactPage" class="contactPage">
             <div class="contactsHeading">
                 <h1>Contacts</h1>
                 <div class="headingBorder"></div>
                 <h2>Better with a team</h2>
-                <a class="arrowLeftContainer" onclick="closeContactPage('contact1')"><img
-                        src="./img/contacts/arrowleft.svg" alt=""></a>
+                <a class="arrowLeftContainer" onclick="closeContactPage('contact1')">
+                    <img src="./img/contacts/arrowleft.svg" alt="">
+                </a>
             </div>
             <div class="contactCard" id="contactCard">
-                <div class="contactCardMainInfos">
-                    <div class="contactProfileBadgeBig">AM</div>
-                    <div class="contactNameBigContainer">
-                        <div class="contactNameBig">Anton Mayer</div>
-                        <div class="contactFunctionsContainer">
-                            <div class="contactFunctions" onclick="editContact()"><img class="contactFunctionsIcons"
-                                    src="./img/contacts/edit.svg" alt="">Edit</div>
-                            <div class="contactFunctions"><img class="contactFunctionsIcons"
-                                    src="./img/contacts/delete.svg" alt="">Delete</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="contactCardSubHead">Contact Information</div>
-                <div class="contactCardDetails">
-                    <div class="contactCardContactInformations">
-                        <div class="contactMethod">Email</div>
-                        <div class="contactDetails contactEmail">wolf@gmail.com</div>
-                    </div>
-                    <div class="contactCardContactInformations">
-                        <div class="contactMethod">Phone</div>
-                        <div class="contactDetails contactPhone">+49 2222 222 22 2</div>
-                    </div>
-                </div>
+                <!-- RENDER JS-->
             </div>
         </div>
+
+
         <div class="contactOptionsIconContainer addPersonIcon" onclick="openAddContact()" id="addPersonIcon"><img
                 src="./img/contacts/smalladdperson.svg" alt=""></div>
+
         <div onclick="openSmallEditMenu()" class="contactOptionsIconContainer editContactIcon noDisplay"
             id="editContactIcon"><img src="./img/contacts/contactoptions.svg" alt=""></div>
-        <div id="contactActionsOverlay" onclick="closeEditContact(); closeAddContact()"
+
+        <div id="contactActionsOverlay" onclick="closeContactEdditor(); closeAddContact()"
             class="contactActionsOverlay noDisplay"></div>
+
         <div id="editContactContainer" class="contactActionsContainer noDisplay">
             <div class="contactActionDetails">
                 <div><img class="contactActionLogo" src="./img/nav/logo.png" alt=""></div>
@@ -156,18 +66,19 @@
             <div class="contactActionFields">
                 <div class="contactProfileBadgeBig editContactProfileBadge contactActionProfileBadgeBig">AM</div>
                 <form class="contactActionForm">
-                    <div class="closeIconContainer" onclick="closeEditContact()"><img class="closeIcon"
+                    <div class="closeIconContainer" onclick="closeContactEditor()"><img class="closeIcon"
                             src="./img/contacts/close.svg" alt=""></div>
-                    <input class="contactActionInput" type="text" placeholder="Name">
-                    <input class="contactActionInput" type="email" placeholder="Email">
-                    <input class="contactActionInput" type="tel" placeholder="Phone">
+                    <input id="editNameInput" class="contactActionInput" type="text" placeholder="Name">
+                    <input id="editEmailInput" class="contactActionInput" type="email" placeholder="Email">
+                    <input id="editPhoneInput" class="contactActionInput" type="tel" placeholder="Phone">
                     <div class="formButtonsContainer">
                         <button class="formButton deleteButton">Delete</button>
-                        <button class="formButton saveButton">Save <img src="./img/contacts/check.svg" alt=""></button>
+                        <button class="formButton saveButton" onclick="saveChanges()">Save <img src="./img/contacts/check.svg" alt=""></button>
                     </div>
                 </form>
             </div>
         </div>
+
         <div id="addContactContainer" class="contactActionsContainer noDisplay">
             <div class="contactActionDetails">
                 <div><img class="contactActionLogo" src="./img/nav/logo.png" alt=""></div>
@@ -196,11 +107,14 @@
                 </form>
             </div>
         </div>
+
         <div id="smallEditMenuOverlay" onclick="closeSmallEditMenu()" class="smallEditMenuOverlay noDisplay"></div>
+
         <div id="smallEditMenu" class="smallEditMenu noDisplay">
-            <div class="smallEditMenuButton" onclick="editContact()"><img src="./img/contacts/editsmall.svg">Edit</div>
+            <div class="smallEditMenuButton" onclick="openContactEditor()"><img src="./img/contacts/editsmall.svg">Edit</div>
             <div class="smallEditMenuButton"><img src="./img/contacts/deletesmall.svg">Delete</div>
         </div>
+
     </main>
 
     <script src="./javascript/contacts.js"></script>
