add board responsive

--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -19,8 +19,8 @@
     </div>    
     <nav id="navbar">
     </nav>
-
-    <main style="width: 1014px;">
+    <div id="smallNav" class="smallNav"></div>
+    <main style="max-width: 1440px; padding-right: 64px;">
         <div class="informationHeader">
             <h1>Privacy Policy</h1>
             <div>
