--- a/login.html
+++ b/login.html
@@ -11,11 +11,11 @@
 </head>
 
 <body>
-<div>
-    <div class="startscreen"></div>
-    <img class="logoStartscreen" src="./img/login/Capa 2.svg" alt="">
-
-</div>
+    <div>
+        <div class="startscreen"></div>
+        <img class="logoStartscreen" src="./img/login/Capa 2.svg" alt="">
+        <div class="logoStartscreenWhite" src="" alt=""></div>
+    </div>
 
     <div class="header">
         <div></div>
@@ -54,12 +54,9 @@
         <span class="legalNotice">Legal notice</span>
     </div>
 
-   
 
-    <script src="./javascript/summary.js"></script>
-    <script src="./javascript/header.js"></script>
-    <script src="./javascript/navbar.js"></script>
     <script src="./javascript/login.js"></script>
 
 </body>
+
 </html>
