--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Summary</title>
+    <title>Sign Up</title>
     <link rel="stylesheet" href="./css/templates.css">
     <link rel="stylesheet" href="./css/signup.css">
     <link rel="icon" type="image/x-icon" href="./img/favicon.png">
@@ -14,7 +14,7 @@
     <div class="header">
         <img class="logoLogin" src="./img/login/Capa 2.svg" alt="">
     </div>
-
+    <div>
     <div class="signupSection">
         <div class="headlineSectionDiv">
             <img class="arrow" src="./img/register/arrow-left-line.svg" alt="">
@@ -39,20 +39,17 @@
             </div>
         </form>
     </div>
-
+</div>
+    <div>
     <div class="policies">
         <span class="privacyPolicy">Privacy Policy</span>
         <span class="legalNotice">Legal notice</span>
     </div>
+</div>
 
     <div>
         <button class="successButtonHide">You Signed Up successfully</button>
     </div>
-
-
-    <script src="./javascript/summary.js"></script>
-    <script src="./javascript/header.js"></script>
-    <script src="./javascript/navbar.js"></script>
 
 </body>
 
