--- a/board.html
+++ b/board.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/x-icon" href="./img/favicon.png">
 </head>
 
-<body onload="init('board'), renderBoard()">
+<body onload="init('board')">
     <header id="header">
     </header>
     <div id="smallMenu" class="smallMenu noDisplay">
@@ -44,7 +44,13 @@
                             </svg>
                         </button>
                     </form>
-                    <button class="addTaskonBoard button">Add tasks <span style="height: 32px; width: 32px;">&#43;</span></button>
+                    <button class="addTaskonBoard button">Add tasks 
+                        
+                            <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M8.66602 11.3327H0.666016V8.66602H8.66602V0.666016H11.3327V8.66602H19.3327V11.3327H11.3327V19.3327H8.66602V11.3327Z" fill="white"/>
+                            </svg>
+                        
+                    </button>
                 </div>
             </div>
         </div>
