--- a/login.html
+++ b/login.html
@@ -23,30 +23,31 @@
             <Button class="buttonSignup">Sign up</Button>
         </div>
     </div>
-
-    <div class="loginSection">
-        <div class="headlineSection">
-            <div class="headlineLogin">Login</div>
-            <div class="borderLogin"></div>
+    <div class="loginSectionDiv">
+        <div class="loginSection">
+            <div class="headlineSection">
+                <div class="headlineLogin">Login</div>
+                <div class="borderLogin"></div>
+            </div>
+            <form action="">
+                <div class="inputFields">
+                    <input class="input inputMail" type="email" placeholder="Email">
+                    <input class="input inputPassword" type="password" placeholder="Password">
+                </div>
+                <div class="remember">
+                    <input class="checkbox" type="checkbox">
+                    <span>Remember me</span>
+                </div>
+                <div class="loginButtons">
+                    <button class="buttonLogin">Log In</button>
+                    <button class="buttonGuest">Guest Log In</button>
+                </div>
+            </form>
         </div>
-        <form action="">
-            <div class="inputFields">
-                <input class="input inputMail" type="email" placeholder="Email">
-                <input class="input inputPassword" type="password" placeholder="Password">
-            </div>
-            <div class="remember">
-                <input class="checkbox" type="checkbox">
-                <span>Remember me</span>
-            </div>
-            <div class="loginButtons">
-                <button class="buttonLogin">Log In</button>
-                <button class="buttonGuest">Guest Log In</button>
-            </div>
-        </form>
     </div>
     <div class="headerResponsive">
         <div class="registerSection"><span class="typoRegister">Not a Join user?</span>
-            <Button class="buttonSignup">Sign up</Button>
+            <button class="buttonSignup">Sign up</button>
         </div>
     </div>
     <div class="policies">
