--- a/board.html
+++ b/board.html
@@ -18,7 +18,7 @@
     </div>    
     <nav id="navbar">
     </nav>
-    <div id="smallNav" class="smallNav"></div>
+    <div id="smallNav" class="smallNav" style="z-index: 100;"></div>
     <main style="max-width: 1440px;">
         <div class="boardHeading">
             <div class="boardPageHeading">
@@ -31,8 +31,8 @@
                     </svg>
                 </div>                    
                 <div class="taskActivities">
-                    <form class="findTask" action="">
-                        <input type="text" placeholder="Find Task" class="findTaskTextarea">
+                    <form class="findTask" action="" onsubmit="findTask()">
+                        <input id="findTask" type="text" placeholder="Find Task" class="findTaskTextarea">
                         <button class="findTaskButton"> 
                             <svg class="" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <mask id="mask0_146316_5742" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="32" height="32">
@@ -66,7 +66,7 @@
                         </svg>   
                     </div> 
                 </div>
-                <div class="boardTasks" id="toDo"></div>
+                <div class="boardTasks" id="toDo" ondrop="moveTo('toDo')" ondragover="allowDrop(event)"></div>
             </div>
             <div class="category">
                 <div class="boardCategory">
@@ -77,7 +77,7 @@
                         <path d="M16 12.5754L8 12.5754" stroke="#2A3647" stroke-width="2" stroke-linecap="round"/>
                     </svg>    
                 </div>
-                <div class="boardTasks" id="inProgress"></div>
+                <div class="boardTasks" id="inProgress" ondrop="moveTo('inProgress')" ondragover="allowDrop(event)"></div>
             </div>
             <div class="category">
                 <div class="boardCategory">
@@ -88,15 +88,13 @@
                         <path d="M16 12.5754L8 12.5754" stroke="#2A3647" stroke-width="2" stroke-linecap="round"/>
                     </svg>    
                 </div>
-                <div class="boardTasks" id="awaitFeedback"></div>
+                <div class="boardTasks" id="awaitFeedback" ondrop="moveTo('awaitFeedback')" ondragover="allowDrop(event)"></div>
             </div>
             <div class="category">
                 <div class="boardCategory">
                     <h3>Done</h3>
                 </div>
-                <div class="boardTasks" id="done">
-                    <div class="boardTasks"></div>
-                </div>
+                <div class="boardTasks" id="done" ondrop="moveTo('done')" ondragover="allowDrop(event)"></div>
             </div>
         </div>
     </main>
