--- a/startpage.html
+++ b/startpage.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="./css/templates.css">
-    <link rel="stylesheet" href="./css/login.css">
+    <link rel="stylesheet" href="./css/startpage.css">
     <link rel="icon" type="image/x-icon" href="./img/favicon.png">
 </head>
 
 <body>
     <div>
-       
-        <img class="logoLogin" src="./img/login/Capa 2.svg" alt="">
-        
+        <div class="startscreen"></div>
+        <img class="logoStartscreen" src="./img/login/Capa 2.svg" alt="">
+        <div class="logoStartscreenWhite" src="" alt=""></div>
     </div>
 
     <div class="header">
