--- a/startpage.html
+++ b/startpage.html
@@ -48,7 +48,7 @@
     </div>
     <div class="headerResponsive">
         <div class="registerSection"><span class="typoRegister">Not a Join user?</span>
-            <button class="buttonSignup">Sign up</button>
+            <button class="buttonSignup" onclick="openSignUpPage()">Sign up</button>
         </div>
     </div>
     <div class="policies">
