--- a/contacts.html
+++ b/contacts.html
@@ -97,9 +97,9 @@
     </main>
 
     <script src="./javascript/contacts.js"></script>
-    <script src="./javascript/JSON/contactlist.js"></script>
     <script src="./javascript/header.js"></script>
     <script src="./javascript/navbar.js"></script>
+    <script src="./javascript/storage.js"></script>
 </body>
 
 </html>
