--- a/contacts.html
+++ b/contacts.html
@@ -95,7 +95,7 @@
             <div class="smallEditMenuButton" onclick="deleteContactSmallScreen(currentContact)"><img src="./img/contacts/deletesmall.svg">Delete</div>
         </div>
     </main>
-
+    <script src="./javascript/signup.js"></script>
     <script src="./javascript/contacts.js"></script>
     <script src="./javascript/header.js"></script>
     <script src="./javascript/navbar.js"></script>
