--- a/board.html
+++ b/board.html
@@ -103,11 +103,12 @@
         <div id="cardAddTask"></div>
         <div id="cardDetail"></div>
     </div>
+    <script src="./javascript/signup.js"></script>
+    <script src="./javascript/JSON/tasks.js"></script>
     <script src="./javascript/summary.js"></script>
     <script src="./javascript/header.js"></script>
     <script src="./javascript/navbar.js"></script>
     <script src="./javascript/board.js"></script>
-    <script src="./javascript/JSON/tasks.js"></script>
 </body>
 
 </html>
