delete summary script

--- a/legalnotice.html
+++ b/legalnotice.html
@@ -55,6 +55,7 @@
             <p>Date: July 26, 2023</p>
         </div>
     </main>
+    <script src="./javascript/signup.js"></script>
     <script src="./javascript/summary.js"></script>
     <script src="./javascript/header.js"></script>
     <script src="./javascript/navbar.js"></script>
