--- a/help.html
+++ b/help.html
@@ -64,6 +64,7 @@
             <h3>Enjoy using Join!</h3>
         </div>
     </main>
+    <script src="./javascript/signup.js"></script>
     <script src="./javascript/summary.js"></script>
     <script src="./javascript/header.js"></script>
     <script src="./javascript/navbar.js"></script>
